# ctypes-freeimage

./: README.md  __init__.py  freeimage.py  freeimage_format.py  setup.cfg  setup.py
freeimage/: __init__.py  freeimage.py  freeimage_type.py
src/freeimage/: __init__.py  core.py  freeimage_type.py  tiff_options.py
