[metadata]
name = ctypes-freeimage
version = attr: src.VERSION
description = A Python wrapper for FreeImage using ctypes.
long_description = file: README.md
url = https://github.com/kshkss/ctypes-freeimage
author = Akishika Issui
license = FreeImage Public License (FIPL)
keywords = freeimage tiff jpeg
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7

[options]
package_dir =
  =src
packages = file:

[options.packages.find]
where = src

